Fix alignment

--- a/hoja2/css/styles.css
+++ b/hoja2/css/styles.css
@@ -96,7 +96,7 @@ body {
 .app-header {
     max-width: inherit;
     width: 100%;
-    height: 65px;
+    height: 64px;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -153,7 +153,6 @@ body {
     height: var(--config-box-height);
     text-align: center;
     align-content: center;
-    margin: 0em;
 
     font-size: var(--font-size-sm);
 
